feat: tried using req payload on get_submissions

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,20 @@
        "      <td>/problems/permutation-in-string/</td>\n",
        "      <td>{'questionFrontendId': '567', 'title': 'Permut...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2022-02-12</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/word-ladder/</td>\n",
+       "      <td>{'questionFrontendId': '127', 'title': 'Word L...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2022-02-13</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/subsets/</td>\n",
+       "      <td>{'questionFrontendId': '78', 'title': 'Subsets...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -244,6 +258,8 @@
        "8   2022-02-09   NotStart                /problems/k-diff-pairs-in-an-array/   \n",
        "9   2022-02-10   NotStart                   /problems/subarray-sum-equals-k/   \n",
        "10  2022-02-11   NotStart                   /problems/permutation-in-string/   \n",
+       "11  2022-02-12   NotStart                             /problems/word-ladder/   \n",
+       "12  2022-02-13   NotStart                                 /problems/subsets/   \n",
        "\n",
        "                                             question  \n",
        "0   {'questionFrontendId': '121', 'title': 'Best T...  \n",
@@ -256,10 +272,12 @@
        "7   {'questionFrontendId': '258', 'title': 'Add Di...  \n",
        "8   {'questionFrontendId': '532', 'title': 'K-diff...  \n",
        "9   {'questionFrontendId': '560', 'title': 'Subarr...  \n",
-       "10  {'questionFrontendId': '567', 'title': 'Permut...  "
+       "10  {'questionFrontendId': '567', 'title': 'Permut...  \n",
+       "11  {'questionFrontendId': '127', 'title': 'Word L...  \n",
+       "12  {'questionFrontendId': '78', 'title': 'Subsets...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,44 +412,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "binay-search\n"
+     ]
+    }
+   ],
+   "source": [
+    "questionSlug = \"binay-search\"\n",
+    "print(questionSlug)\n",
+    "QUERY_SUBMISSIONS = \\\n",
+    "\"\"\"\n",
+    "{\n",
+    "    \"operationName\": \"Submissions\",\n",
+    "    \"variables\": {\n",
+    "        \"offset\": 0,\n",
+    "        \"limit\": 20,\n",
+    "        \"lastKey\": null,\n",
+    "        \"questionSlug\": \"reorder-data-in-log-files\"\n",
+    "    },\n",
+    "    \"query\": \"query Submissions($offset: Int!, $limit: Int!, $lastKey: String, $questionSlug: String!) {\n",
+    "        submissionList(offset: $offset, limit: $limit, lastKey: $lastKey, questionSlug: $questionSlug) {\n",
+    "            lastKey\n",
+    "            hasNext\n",
+    "            submissions {\n",
+    "            id\n",
+    "            statusDisplay\n",
+    "            lang\n",
+    "            runtime\n",
+    "            timestamp\n",
+    "            url\n",
+    "            isPending\n",
+    "            memory\n",
+    "            __typename\n",
+    "            }\n",
+    "            __typename\n",
+    "        }\n",
+    "    }\"\n",
+    "}\n",
+    "\"\"\"\n",
+    "# .format(questionSlug)\n",
+    "QUERY_SUBMISSIONS2 = \"\"\"{\n",
+    "  \"operationName\": \"Submissions\",\n",
+    "  \"variables\": {\n",
+    "    \"offset\": 0,\n",
+    "    \"limit\": 20,\n",
+    "    \"lastKey\": null,\n",
+    "    \"questionSlug\": \"reorder-data-in-log-files\"\n",
+    "  },\n",
+    "  \"query\": \"query Submissions($offset: Int!, $limit: Int!, $lastKey: String, $questionSlug: String!) {\\n  submissionList(offset: $offset, limit: $limit, lastKey: $lastKey, questionSlug: $questionSlug) {\\n    lastKey\\n    hasNext\\n    submissions {\\n      id\\n      statusDisplay\\n      lang\\n      runtime\\n      timestamp\\n      url\\n      isPending\\n      memory\\n      __typename\\n    }\\n    __typename\\n  }\\n}\\n\"\n",
+    "}\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# probably needs login auth to view the actual code submissions??...?\n",
-    "def get_submissions(questionSlug):\n",
+    "def get_submissions(query,questionSlug):\n",
     "    base_url = 'https://leetcode.com/graphql/'\n",
     "    url = base_url\n",
+    "    headers = {\"Authorization\": \"Bear token\"}\n",
     "    # offset = 0\n",
     "    # limit = 20\n",
-    "    query = \"\"\"\n",
-    "    query {\n",
-    "      submissionList(questionSlug: \"%s\",offset:0,limit:20) {\n",
-    "        submissions {\n",
-    "          id\n",
-    "          statusDisplay\n",
-    "          lang\n",
-    "          runtime\n",
-    "          timestamp\n",
-    "          url\n",
-    "          isPending\n",
-    "          memory\n",
-    "          __typename\n",
-    "        }\n",
-    "        }\n",
-    "      }\n",
-    "    \"\"\" %(questionSlug)\n",
-    "    result = requests.post(url, json={'query': query})\n",
-    "    print(result.status_code)\n",
+    "    # query = \"\"\"\n",
+    "    # query {\n",
+    "    #   submissionList(questionSlug: \"%s\",offset:0,limit:20) {\n",
+    "    #     submissions {\n",
+    "    #       id\n",
+    "    #       statusDisplay\n",
+    "    #       lang\n",
+    "    #       runtime\n",
+    "    #       timestamp\n",
+    "    #       url\n",
+    "    #       isPending\n",
+    "    #       memory\n",
+    "    #       __typename\n",
+    "    #     }\n",
+    "    #     }\n",
+    "    #   }\n",
+    "    # \"\"\" %(questionSlug)\n",
+    "    result = requests.post(url, json={'query': query}, headers=headers)\n",
+    "    print(result.status_code, result)\n",
     "    json_dump = json.loads(result.text)\n",
-    "    print(json_dump)\n",
+    "    # print(json_dump)\n",
     "    json_data = json_dump['data']['submissionList']\n",
     "    json_df = pd.DataFrame(json_data)\n",
-    "    print(json_df)\n",
+    "    # print(json_df)\n",
     "    return json_df\n",
     "\n",
-    "titleSlug = \"binay-search\"\n",
-    "# submits_df = get_submissions(titleSlug)\n",
+    "# submits_df = get_submissions(QUERY_SUBMISSIONS,questionSlug)\n",
     "# print(submits_df)\n",
     "\n",
     "\n",
