feat: separate GraphQL queries from code

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "import datetime\n",
     "import time\n",
     "import os\n",
+    "import queries # ./queries.py\n",
     "# https://jerrynsh.com/how-i-sync-daily-leetcoding-challenge-to-todoist/\n",
     "# https://towardsdatascience.com/connecting-to-a-graphql-api-using-python-246dda927840\n",
     "\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +242,13 @@
        "      <td>/problems/subsets/</td>\n",
        "      <td>{'questionFrontendId': '78', 'title': 'Subsets...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2022-02-14</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/maximum-depth-of-binary-tree/</td>\n",
+       "      <td>{'questionFrontendId': '104', 'title': 'Maximu...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -260,6 +268,7 @@
        "10  2022-02-11   NotStart                   /problems/permutation-in-string/   \n",
        "11  2022-02-12   NotStart                             /problems/word-ladder/   \n",
        "12  2022-02-13   NotStart                                 /problems/subsets/   \n",
+       "13  2022-02-14   NotStart            /problems/maximum-depth-of-binary-tree/   \n",
        "\n",
        "                                             question  \n",
        "0   {'questionFrontendId': '121', 'title': 'Best T...  \n",
@@ -274,10 +283,11 @@
        "9   {'questionFrontendId': '560', 'title': 'Subarr...  \n",
        "10  {'questionFrontendId': '567', 'title': 'Permut...  \n",
        "11  {'questionFrontendId': '127', 'title': 'Word L...  \n",
-       "12  {'questionFrontendId': '78', 'title': 'Subsets...  "
+       "12  {'questionFrontendId': '78', 'title': 'Subsets...  \n",
+       "13  {'questionFrontendId': '104', 'title': 'Maximu...  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,39 +327,13 @@
     "\n",
     "yyyy = '2022'\n",
     "mm = '2'\n",
-    "query_dailyCodingChallenge = \"\"\"\n",
-    "query {\n",
-    "  dailyCodingChallengeV2(year: %s, month: %s) {\n",
-    "    challenges {\n",
-    "      date\n",
-    "      userStatus\n",
-    "      link\n",
-    "      question {\n",
-    "        questionFrontendId\n",
-    "        title\n",
-    "        titleSlug\n",
-    "      }\n",
-    "    }\n",
-    "    weeklyChallenges {\n",
-    "      date\n",
-    "      userStatus\n",
-    "      link\n",
-    "      question {\n",
-    "        questionFrontendId\n",
-    "        title\n",
-    "        titleSlug\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "}\n",
-    "\"\"\" %(yyyy, mm)#, yyyy, mm)\n",
     "\n",
     "def get_dailyChallenges(query):\n",
     "  base_url = 'https://leetcode.com/graphql/'\n",
     "  url = base_url\n",
     "  # https://towardsdatascience.com/connecting-to-a-graphql-api-using-python-246dda927840\n",
     "  # return requests.post(url,headers=headers,data=new_query)\n",
-    "  result = requests.post(url,json={'query':query})\n",
+    "  result = requests.post(url,json={'query':query%(yyyy,mm)})\n",
     "  print(url, result.status_code)\n",
     "  json_dump = json.loads(result.text)\n",
     "  # print(json_dump)\n",
@@ -360,13 +344,13 @@
     "  return daily_df\n",
     "  # print(daily_df)\n",
     "\n",
-    "daily_df = get_dailyChallenges(query_dailyCodingChallenge)\n",
+    "daily_df = get_dailyChallenges(queries.QUERY_DAILYCODINGCHALLENGE)\n",
     "daily_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,66 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "binay-search\n"
-     ]
-    }
-   ],
-   "source": [
-    "questionSlug = \"binay-search\"\n",
-    "print(questionSlug)\n",
-    "QUERY_SUBMISSIONS = \\\n",
-    "\"\"\"\n",
-    "{\n",
-    "    \"operationName\": \"Submissions\",\n",
-    "    \"variables\": {\n",
-    "        \"offset\": 0,\n",
-    "        \"limit\": 20,\n",
-    "        \"lastKey\": null,\n",
-    "        \"questionSlug\": \"reorder-data-in-log-files\"\n",
-    "    },\n",
-    "    \"query\": \"query Submissions($offset: Int!, $limit: Int!, $lastKey: String, $questionSlug: String!) {\n",
-    "        submissionList(offset: $offset, limit: $limit, lastKey: $lastKey, questionSlug: $questionSlug) {\n",
-    "            lastKey\n",
-    "            hasNext\n",
-    "            submissions {\n",
-    "            id\n",
-    "            statusDisplay\n",
-    "            lang\n",
-    "            runtime\n",
-    "            timestamp\n",
-    "            url\n",
-    "            isPending\n",
-    "            memory\n",
-    "            __typename\n",
-    "            }\n",
-    "            __typename\n",
-    "        }\n",
-    "    }\"\n",
-    "}\n",
-    "\"\"\"\n",
-    "# .format(questionSlug)\n",
-    "QUERY_SUBMISSIONS2 = \"\"\"{\n",
-    "  \"operationName\": \"Submissions\",\n",
-    "  \"variables\": {\n",
-    "    \"offset\": 0,\n",
-    "    \"limit\": 20,\n",
-    "    \"lastKey\": null,\n",
-    "    \"questionSlug\": \"reorder-data-in-log-files\"\n",
-    "  },\n",
-    "  \"query\": \"query Submissions($offset: Int!, $limit: Int!, $lastKey: String, $questionSlug: String!) {\\n  submissionList(offset: $offset, limit: $limit, lastKey: $lastKey, questionSlug: $questionSlug) {\\n    lastKey\\n    hasNext\\n    submissions {\\n      id\\n      statusDisplay\\n      lang\\n      runtime\\n      timestamp\\n      url\\n      isPending\\n      memory\\n      __typename\\n    }\\n    __typename\\n  }\\n}\\n\"\n",
-    "}\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,35 +405,19 @@
     "    base_url = 'https://leetcode.com/graphql/'\n",
     "    url = base_url\n",
     "    headers = {\"Authorization\": \"Bear token\"}\n",
-    "    # offset = 0\n",
-    "    # limit = 20\n",
-    "    # query = \"\"\"\n",
-    "    # query {\n",
-    "    #   submissionList(questionSlug: \"%s\",offset:0,limit:20) {\n",
-    "    #     submissions {\n",
-    "    #       id\n",
-    "    #       statusDisplay\n",
-    "    #       lang\n",
-    "    #       runtime\n",
-    "    #       timestamp\n",
-    "    #       url\n",
-    "    #       isPending\n",
-    "    #       memory\n",
-    "    #       __typename\n",
-    "    #     }\n",
-    "    #     }\n",
-    "    #   }\n",
-    "    # \"\"\" %(questionSlug)\n",
-    "    result = requests.post(url, json={'query': query}, headers=headers)\n",
-    "    print(result.status_code, result)\n",
+    "    result = requests.post(url, \n",
+    "        json={'query': query%(questionSlug)})#, headers=headers)\n",
+    "    print(result.status_code) # 499= maybe CSRF?\n",
+    "    # print(result.content)\n",
     "    json_dump = json.loads(result.text)\n",
-    "    # print(json_dump)\n",
+    "    print(json_dump)\n",
     "    json_data = json_dump['data']['submissionList']\n",
     "    json_df = pd.DataFrame(json_data)\n",
-    "    # print(json_df)\n",
+    "    print(json_df)\n",
     "    return json_df\n",
     "\n",
-    "# submits_df = get_submissions(QUERY_SUBMISSIONS,questionSlug)\n",
+    "# questionSlug = \"binay-search\"\n",
+    "# submits_df = get_submissions(queries.QUERY_SUBMISSIONS,questionSlug)\n",
     "# print(submits_df)\n",
     "\n",
     "\n",
