ablestudy-2022-02-28: upto lec36

--- a/ablestudy-lec32.ipynb
+++ b/ablestudy-lec32.ipynb
@@ -5,12 +5,45 @@
    "metadata": {},
    "source": [
     "# ablestudy-2022-02-28\n",
-    "lecture 32-33"
+    "lec 31-36"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'> {'name': (1, 2)}\n",
+      "<class 'list'> ['name']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'name':(1,2)} #dict\n",
+    "print(type(a), a)\n",
+    "# <class 'dict'>\n",
+    "# {'name': (1, 2)}\n",
+    "\n",
+    "b = list(a)\n",
+    "print(type(b), b)\n",
+    "# <class 'list'>\n",
+    "# ['name'] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "json module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +166,213 @@
     "# print all logs\n",
     "for log in jsonObj['logdata']:\n",
     "    print(f\"Access date is {log['date']} and device is {log['device']}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('aaa', 100)\n",
+      "('bbb', 200)\n",
+      "('ccc', 300)\n",
+      "('ddd', 400)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dict methods\n",
+    "test_dict = {'aaa':100,'bbb':200,'ccc':300,'ddd':400}\n",
+    "for item in test_dict.items():\n",
+    "    print(item) # ('aaa', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaa\n",
+      "bbb\n",
+      "ccc\n",
+      "ddd\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in test_dict.keys():\n",
+    "    print(key) # aaa\n",
+    "for val in test_dict.values():\n",
+    "    print(val) # 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dict methods contd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 100, 'bbb': 200, 'ccc': 300, 'ddd': 400, 'eee': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .setdefault without val\n",
+    "test_dict.setdefault('eee') # 'eee':None\n",
+    "print(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 100, 'bbb': 200, 'ccc': 300, 'ddd': 400, 'eee': None, 'fff': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .setdefault with val\n",
+    "test_dict.setdefault('fff',500) # 'fff':500\n",
+    "print(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 100, 'bbb': 200, 'ccc': 300, 'ddd': 400, 'eee': 600, 'fff': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .update (modify or add)\n",
+    "test_dict.update(eee=600) # NOTE that no `'`\n",
+    "print(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 700, 'bbb': 800, 'ccc': 300, 'ddd': 400, 'eee': 600, 'fff': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .update multiple elements\n",
+    "test_dict.update(aaa=700,bbb=800)\n",
+    "print(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 700, 'bbb': 800, 'ccc': 900, 'ddd': 1000, 'eee': 600, 'fff': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .update dicts\n",
+    "test_dict.update({'ccc':900,'ddd':1000})\n",
+    "print(test_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 111, 'bbb': 222}\n",
+      "aaa:111\n",
+      "bbb:222\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dict2 = dict(aaa=111,bbb=222)\n",
+    "print(test_dict2)\n",
+    "\n",
+    "# printing dict items \n",
+    "for key,val in test_dict2.items():\n",
+    "    print('%s:%d' %(key,val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'aaa': 111, 'bbb': 222, 'ccc': [1, 2, 3, 4, 5]}\n",
+      "{'aaa': 111, 'bbb': 222, 'ccc': [1, 2, 3, 4, 5, 6]}\n",
+      "{'aaa': 111, 'bbb': 222, 'ccc': [2, 3, 4, 5, 6]}\n",
+      "{'aaa': 111, 'bbb': 222}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_dict2.update(ccc=[1,2,3,4,5])\n",
+    "print(test_dict2)\n",
+    "\n",
+    "# .append\n",
+    "test_dict2['ccc'].append(6)\n",
+    "print(test_dict2)\n",
+    "# .remove from list\n",
+    "test_dict2['ccc'].remove(1)\n",
+    "print(test_dict2)\n",
+    "# del from dict\n",
+    "del test_dict2['ccc']\n",
+    "print(test_dict2)"
    ]
   }
  ],
