--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -161,165 +161,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-02-01</td>\n",
+       "      <td>2022-03-01</td>\n",
        "      <td>NotStart</td>\n",
-       "      <td>/problems/best-time-to-buy-and-sell-stock/</td>\n",
-       "      <td>{'questionFrontendId': '121', 'title': 'Best T...</td>\n",
+       "      <td>/problems/counting-bits/</td>\n",
+       "      <td>{'questionFrontendId': '338', 'title': 'Counti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-02-02</td>\n",
+       "      <td>2022-03-02</td>\n",
        "      <td>NotStart</td>\n",
-       "      <td>/problems/find-all-anagrams-in-a-string/</td>\n",
-       "      <td>{'questionFrontendId': '438', 'title': 'Find A...</td>\n",
+       "      <td>/problems/is-subsequence/</td>\n",
+       "      <td>{'questionFrontendId': '392', 'title': 'Is Sub...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-02-03</td>\n",
+       "      <td>2022-03-03</td>\n",
        "      <td>NotStart</td>\n",
-       "      <td>/problems/4sum-ii/</td>\n",
-       "      <td>{'questionFrontendId': '454', 'title': '4Sum I...</td>\n",
+       "      <td>/problems/arithmetic-slices/</td>\n",
+       "      <td>{'questionFrontendId': '413', 'title': 'Arithm...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-02-04</td>\n",
+       "      <td>2022-03-04</td>\n",
        "      <td>NotStart</td>\n",
-       "      <td>/problems/contiguous-array/</td>\n",
-       "      <td>{'questionFrontendId': '525', 'title': 'Contig...</td>\n",
+       "      <td>/problems/champagne-tower/</td>\n",
+       "      <td>{'questionFrontendId': '799', 'title': 'Champa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-02-05</td>\n",
+       "      <td>2022-03-05</td>\n",
        "      <td>NotStart</td>\n",
-       "      <td>/problems/merge-k-sorted-lists/</td>\n",
-       "      <td>{'questionFrontendId': '23', 'title': 'Merge k...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2022-02-06</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/remove-duplicates-from-sorted-array-ii/</td>\n",
-       "      <td>{'questionFrontendId': '80', 'title': 'Remove ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2022-02-07</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/find-the-difference/</td>\n",
-       "      <td>{'questionFrontendId': '389', 'title': 'Find t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2022-02-08</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/add-digits/</td>\n",
-       "      <td>{'questionFrontendId': '258', 'title': 'Add Di...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2022-02-09</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/k-diff-pairs-in-an-array/</td>\n",
-       "      <td>{'questionFrontendId': '532', 'title': 'K-diff...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2022-02-10</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/subarray-sum-equals-k/</td>\n",
-       "      <td>{'questionFrontendId': '560', 'title': 'Subarr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2022-02-11</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/permutation-in-string/</td>\n",
-       "      <td>{'questionFrontendId': '567', 'title': 'Permut...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2022-02-12</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/word-ladder/</td>\n",
-       "      <td>{'questionFrontendId': '127', 'title': 'Word L...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2022-02-13</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/subsets/</td>\n",
-       "      <td>{'questionFrontendId': '78', 'title': 'Subsets...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/maximum-depth-of-binary-tree/</td>\n",
-       "      <td>{'questionFrontendId': '104', 'title': 'Maximu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2022-02-15</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/single-number/</td>\n",
-       "      <td>{'questionFrontendId': '136', 'title': 'Single...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2022-02-16</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/swap-nodes-in-pairs/</td>\n",
-       "      <td>{'questionFrontendId': '24', 'title': 'Swap No...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2022-02-17</td>\n",
-       "      <td>NotStart</td>\n",
-       "      <td>/problems/combination-sum/</td>\n",
-       "      <td>{'questionFrontendId': '39', 'title': 'Combina...</td>\n",
+       "      <td>/problems/delete-and-earn/</td>\n",
+       "      <td>{'questionFrontendId': '740', 'title': 'Delete...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          date userStatus                                               link  \\\n",
-       "0   2022-02-01   NotStart         /problems/best-time-to-buy-and-sell-stock/   \n",
-       "1   2022-02-02   NotStart           /problems/find-all-anagrams-in-a-string/   \n",
-       "2   2022-02-03   NotStart                                 /problems/4sum-ii/   \n",
-       "3   2022-02-04   NotStart                        /problems/contiguous-array/   \n",
-       "4   2022-02-05   NotStart                    /problems/merge-k-sorted-lists/   \n",
-       "5   2022-02-06   NotStart  /problems/remove-duplicates-from-sorted-array-ii/   \n",
-       "6   2022-02-07   NotStart                     /problems/find-the-difference/   \n",
-       "7   2022-02-08   NotStart                              /problems/add-digits/   \n",
-       "8   2022-02-09   NotStart                /problems/k-diff-pairs-in-an-array/   \n",
-       "9   2022-02-10   NotStart                   /problems/subarray-sum-equals-k/   \n",
-       "10  2022-02-11   NotStart                   /problems/permutation-in-string/   \n",
-       "11  2022-02-12   NotStart                             /problems/word-ladder/   \n",
-       "12  2022-02-13   NotStart                                 /problems/subsets/   \n",
-       "13  2022-02-14   NotStart            /problems/maximum-depth-of-binary-tree/   \n",
-       "14  2022-02-15   NotStart                           /problems/single-number/   \n",
-       "15  2022-02-16   NotStart                     /problems/swap-nodes-in-pairs/   \n",
-       "16  2022-02-17   NotStart                         /problems/combination-sum/   \n",
+       "         date userStatus                          link  \\\n",
+       "0  2022-03-01   NotStart      /problems/counting-bits/   \n",
+       "1  2022-03-02   NotStart     /problems/is-subsequence/   \n",
+       "2  2022-03-03   NotStart  /problems/arithmetic-slices/   \n",
+       "3  2022-03-04   NotStart    /problems/champagne-tower/   \n",
+       "4  2022-03-05   NotStart    /problems/delete-and-earn/   \n",
        "\n",
-       "                                             question  \n",
-       "0   {'questionFrontendId': '121', 'title': 'Best T...  \n",
-       "1   {'questionFrontendId': '438', 'title': 'Find A...  \n",
-       "2   {'questionFrontendId': '454', 'title': '4Sum I...  \n",
-       "3   {'questionFrontendId': '525', 'title': 'Contig...  \n",
-       "4   {'questionFrontendId': '23', 'title': 'Merge k...  \n",
-       "5   {'questionFrontendId': '80', 'title': 'Remove ...  \n",
-       "6   {'questionFrontendId': '389', 'title': 'Find t...  \n",
-       "7   {'questionFrontendId': '258', 'title': 'Add Di...  \n",
-       "8   {'questionFrontendId': '532', 'title': 'K-diff...  \n",
-       "9   {'questionFrontendId': '560', 'title': 'Subarr...  \n",
-       "10  {'questionFrontendId': '567', 'title': 'Permut...  \n",
-       "11  {'questionFrontendId': '127', 'title': 'Word L...  \n",
-       "12  {'questionFrontendId': '78', 'title': 'Subsets...  \n",
-       "13  {'questionFrontendId': '104', 'title': 'Maximu...  \n",
-       "14  {'questionFrontendId': '136', 'title': 'Single...  \n",
-       "15  {'questionFrontendId': '24', 'title': 'Swap No...  \n",
-       "16  {'questionFrontendId': '39', 'title': 'Combina...  "
+       "                                            question  \n",
+       "0  {'questionFrontendId': '338', 'title': 'Counti...  \n",
+       "1  {'questionFrontendId': '392', 'title': 'Is Sub...  \n",
+       "2  {'questionFrontendId': '413', 'title': 'Arithm...  \n",
+       "3  {'questionFrontendId': '799', 'title': 'Champa...  \n",
+       "4  {'questionFrontendId': '740', 'title': 'Delete...  "
       ]
      },
      "execution_count": 5,
@@ -361,7 +253,7 @@
     "    f.close()\n",
     "\n",
     "yyyy = '2022'\n",
-    "mm = '2'\n",
+    "mm = '3'\n",
     "\n",
     "def get_dailyChallenges(query):\n",
     "  base_url = 'https://leetcode.com/graphql/'\n",
@@ -392,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "121 best-time-to-buy-and-sell-stock\n"
+      "338 counting-bits\n"
      ]
     }
    ],
